166:Building sdfprovider using JDK 11+ failed with "javah command not found"